# django-channels-handlers

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.md  AUTHORS.rst  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  LICENSE  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
channels_handlers/: __init__.py  channels_handlers.py  consumers.py  handlers.py
tests/: test_sample.py
